# CopperProject

./: .gitignore  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classcopper_1_1_copper.html  classcopper_1_1failure.html  classcopper_1_1http__session.html  classcopper_1_1listener.html  classcopper_1_1logger.html  classcopper_1_1state.html  classcopper_1_1state__configuration.html  classcopper_1_1state__container.html  classcopper_1_1websocket__session.html  classelephant_1_1_elephant.html  copper_8h.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_21f2f82ed0b9d88b39a2c3f4a7625044.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_6c1febe51bc8b9cf6264c40eadcf77c7.html  elephant_8h.html  failure_8h.html  files.html  http__session_8h.html  index.html  listener_8h.html  logger_8h.html  modules.html  namespaceboost.html  namespacecopper.html  namespaceelephant.html  namespaces.html  pages.html  redis.cpp  searchdata-v2.js  state_8h.html  state__container_8h.html  structcopper_1_1state__config.html  (+1 more)
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
include/copper/: copper.h  failure.h  http_session.h  listener.h  logger.h  protocol.h  state.h  state_container.h  websocket_session.h
include/elephant/: elephant.h
source/: copper.cpp  elephant.cpp  http_session.cpp  listener.cpp  state.cpp  state_container.cpp  websocket_session.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: copper.cpp  greeter.cpp  listener.cpp  logger.cpp  state.cpp  state_container.cpp
